Bug #73946: Clean up incomplete removal of report-related cache monitoring
When reports were removed as a mainline feature, the report-related cache
monitoring infrastructure was only partially cleaned up. The REPORT constant
in XSwappableMonitor was still being used to monitor both runtime sheet cache
usage and the narrow use of reports when exporting sheets to PDF. The
monitoring callbacks were no-ops in CacheService and CacheMeterService,
meaning sheet cache activity (hits, misses, bytes read/written) was never
actually tracked.

Changes made:
- Rename XSwappableMonitor.REPORT to SHEET to reflect the actual primary
  usage of this cache category (runtime viewsheets and worksheets).
- Rename the corresponding CacheInfo.REPORT, CacheState.report*, and
  CacheMeterService field/variable counterparts to use "sheet" terminology.
- Add missing sheet cache metrics to CacheMetrics (sheetMemoryCount,
  sheetDiskCount, sheetBytesRead, sheetBytesWritten, sheetHits, sheetMisses).
- Activate the previously no-op countRead, countWrite, countHits, and
  countMisses implementations in CacheService for the SHEET type so that
  sheet cache activity is actually accumulated and reported.
- Track RuntimeSheet.XSwappableSheet and PageGroup objects in the sheet
  memory/disk count in CacheService.updateStatus (for the Admin UI charts)
  and in CacheMeterService.updateGauges (for Micrometer metrics), making
  both consistent with each other.
- Make XSwappableSheet a public nested class of RuntimeSheet so it can be
  referenced from CacheService and CacheMeterService for instanceof checks.
- Update XSwappableSheet and PageGroup to use XSwappableMonitor.SHEET (via
  its renamed constant) for read/write monitoring, replacing the previously
  unused DATA category that was applied by mistake.
- Add "Runtime Assets" i18n string and update the Admin UI chart label for
  the cache monitoring page from "Reports" to "Runtime Assets".
- Fix a pre-existing bug where the CacheState history snapshot 